<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_explore"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_explore" />
    <item
        android:id="@+id/nav_requests"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_requests" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/nav_notifications" />
</menu>
